--- a/index.html
+++ b/index.html
@@ -6,51 +6,53 @@
 <title>Margaret Cezar's Resume</title>
 <link rel="stylesheet" href="style.css" />
  </head>
+
  <body>
  <div class="resume-container">
  <header>
- <h1>Margaret Cezar</h1>
- </header>
-
- <section class="contact-info">
- <p>2846 Rainwood Crt, San Jose, California 95148 | Phone: 415-432-0167 |
+    <section class="contact-info">
+    <h1>Margaret Cezar</h1>
+        <p> California, USA | Phone: 415-432-0167 |
  Email:
- <a href="mailto:cezarlofellem@gmail.com" >cezarlofellem@gmail.com</a>
+<a href="mailto:cezarlofellem@gmail.com" rel="noopener noreferrer">cezarlofellem@gmail.com</a>
  </p>
  <p>
- Websites:
+ <section class="navbar">
+    Websites:
  <br />
-    <a href="https://www.github.com/margaret6556/" aria-label="github portfolio"> Github Portfolio </a> <br/>
-    <a href="https://www.linkedin.com/in/margaretcezar.com" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
-    <a href="https://www.margaretcezar.com" aria-label="personal website"> Personal website </a> <br/>
-    <a href="https://margaretcezar.my.canva.site/" aria-label="personal website canva made design" 
+<a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
+
+    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
+    <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
+    <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
     > Canva Design</a>
     <br />
-
     </p>
-
-    <h1>Front-End Engineer / Cybersecurity Student</h1>
     </section>
 
+    <h1>Full-Stack Developer / Cybersecurity Student</h1>
+    </section>
+ </header>
     <!-- Additional sections for Education, Experience, etc. -->
 
     <section>
     <div class="resume-body">
     <h2>Summary</h2>
-    <p>I am excited to apply for the Full Stack Developer (Web Developer) role at your company. My background in web development, combined with a keen interest in technological innovation, aligns perfectly with the dynamic and forward-thinking environment your company represents.
-I'm a web development ninja, passionate about crafting user-friendly interfaces that are as easy to use as a slice of the pie. I'm good at harmonizing whether HTML, CSS, JavaScript, or React. I'm familiar with all the latest front-end frameworks, from React to Cybersecurity, and I'm always eager to learn more.
-As an experienced tech startup founder, I was the mastermind for all things front-end and back-end. I worked closely with the design and developer team to turn my visions into reality and ensured our projects were pixel-perfect. I'm a team player who's not afraid to roll up my sleeves and get my hands dirty. Whether debugging code, optimizing website performance, or crafting user-friendly interfaces, I'm always up for a challenge.
+    <p> I'm a web development ninja, passionate about crafting user-friendly interfaces that are as easy to use as a slice of the pie. I'm good at harmonizing whether HTML, CSS, JavaScript, or React. I'm familiar with all the latest front-end frameworks, from React to Cybersecurity, and I'm always eager to learn more.
+
+<br />
+    As an experienced tech startup founder, I was the mastermind for all things front-end and back-end. I worked closely with the design and developer team to turn my visions into reality and ensured our projects were pixel-perfect. I'm a team player who's not afraid to roll up my sleeves and get my hands dirty. Whether debugging code, optimizing website performance, or crafting user-friendly interfaces, I'm always up for a challenge.
 <br />
 I am a multi-passionate and multi-skilled generalist with a wide range of experience in Marketing, Product & Engineering, Accounting, and Legal domains. I have a Bachelor's degree and am a self-motivated entrepreneur passionate about technology.  My greatest strength is my ability to improve processes where possible, and I am proactive, a fast learner, and highly organized. I am open to joining a technical team, working with A-team players, and solving challenging and impactful cases.
 </p>
 
-<h3>Technical Skills</h3>
+<h3>Technical Skills:</h3>
 
 <ul>
     <li>Programming languages: 
 HTML5, CSS3, JavaScript, React, JS, Python </li>
     <li>Tools and Platforms: VS Code, Git, GitHub, Azure, AWS, Shopify, WordPress, VS Code, Git, GitHub, Canva, Shopify, NodeJS, Netlify, Microsoft Office 365</li>
-    <li>Frameworks and Technologies: OpenAI ChatGPT, Azure </li>
+    <li>Frameworks and Technologies: OpenAI ChatGPT, Azure, Generative AI </li>
 </ul>
 
 <h3>Soft Skills:</h3>
