edited readme and 2nd styling update applied

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
  <header>
     <section class="contact-info">
     <h1>Margaret Cezar</h1>
-        <p> California, USA | Phone: 415-432-0167 |
- Email:
-<a href="mailto:cezarlofellem@gmail.com" rel="noopener noreferrer">cezarlofellem@gmail.com</a>
+        <p> California, USA | <a href="https://margaretcezar.com/contact" rel="noopener noreferrer"> Contact Me</a>
  </p>
  <p>
- <section class="navbar">
     Websites:
  <br />
 <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
@@ -25,10 +22,9 @@
     <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
     <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
     <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
-    > Canva Design</a>
+    > Canva Portfolio</a>
     <br />
     </p>
-    </section>
 
     <h1>Full-Stack Developer / Cybersecurity Student</h1>
     </section>
@@ -63,7 +59,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
     <li>Time Management</li>
 </ul>
 
-<h3>Education</h3>
+<h3>Education:</h3>
 <ul>
 
 <li> Microsoft Learn -Azure (online)    - ongoing</li>
@@ -78,7 +74,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 <li> BSc. in Respiratory Therapy    Emilio Aguinaldo College  </li>
 </ul>
 
-<h3> Certifications</h3>
+<h3> Certifications:</h3>
 <ul>
 <li> Diploma in Graphic Design                  | Shaw Academy              Issued July 2020 </li>
 <li> Certified eCommerce Marketing Specialist   | Digital Marketer          Issued April 2020 </li> 
