--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Margaret Cezar's Resume</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
  </head>
 
  <body>
@@ -26,20 +36,19 @@
     <br />
     </p>
 
-    <h1>Full-Stack Developer / Cybersecurity Student</h1>
+    <h2>Full-Stack Developer / Cybersecurity Student</h2>
     </section>
  </header>
     <!-- Additional sections for Education, Experience, etc. -->
 
     <section>
     <div class="resume-body">
-    <h2>Summary</h2>
+    <h3>Summary</h3>
     <p> I'm a web development ninja, passionate about crafting user-friendly interfaces that are as easy to use as a slice of the pie. I'm good at harmonizing whether HTML, CSS, JavaScript, or React. I'm familiar with all the latest front-end frameworks, from React to Cybersecurity, and I'm always eager to learn more.
-
-<br />
+<br>
     As an experienced tech startup founder, I was the mastermind for all things front-end and back-end. I worked closely with the design and developer team to turn my visions into reality and ensured our projects were pixel-perfect. I'm a team player who's not afraid to roll up my sleeves and get my hands dirty. Whether debugging code, optimizing website performance, or crafting user-friendly interfaces, I'm always up for a challenge.
-<br />
-I am a multi-passionate and multi-skilled generalist with a wide range of experience in Marketing, Product & Engineering, Accounting, and Legal domains. I have a Bachelor's degree and am a self-motivated entrepreneur passionate about technology.  My greatest strength is my ability to improve processes where possible, and I am proactive, a fast learner, and highly organized. I am open to joining a technical team, working with A-team players, and solving challenging and impactful cases.
+<br >
+    I am a multi-passionate and multi-skilled generalist with a wide range of experience in Marketing, Product & Engineering, Accounting, and Legal domains. I have a Bachelor's degree and am a self-motivated entrepreneur passionate about technology.  My greatest strength is my ability to improve processes where possible, and I am proactive, a fast learner, and highly organized. I am open to joining a technical team, working with A-team players, and solving challenging and impactful cases.
 </p>
 
 <h3>Technical Skills:</h3>
@@ -97,17 +106,12 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 <li> Financial Analysis: Intro to Business Performance  |   Lynda/LinkedIn Learning     Issued September 2017 </li> 
 <li> Business Writing Certificate               | Skills for Change         Issued 2008 </li>
 </ul>
-
 </section>
     </div>
-
 <div>
-
 </div>
 
-
 </div>
-
     <script src="script.js"></script>
     </body>
 </html>
