--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
+<link rel="icon" href="favicon.ico" sizes="16x16 32x32" type="image/x-icon">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
@@ -31,15 +34,11 @@
  </p>
  <p>
     Websites:
- <br />
-<a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
-
-    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
-    <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
-    <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
-    > Canva Portfolio</a>
-    <br />
-    </p>
+    <div class="social-links">
+        <a href="https://www.linkedin.com/in/margaretcezar" class="linkedin" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> <i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.margaretcezar.com" class="website" target="_blank" rel="noopener noreferrer" aria-label="personal website"> <i class="fas fa-globe"></i></a>
+        <a href="https://www.twitter.com/lofelle" class="twitter" class="linkedin" target="_blank" rel="noopener noreferrer" aria-label="twitter website"> <i class="fab fa-twitter"></i></a>
+    </div>
 
     <h2>Full-Stack Developer / Cybersecurity Student</h2>
     </section>
@@ -78,7 +77,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 
 <li> Microsoft Learn -Azure (online)    - ongoing</li>
 <li> Python Certification course (online)   - ongoing </li>
-<li> She Codes Coding Bootcamp  online -   ongoing </li>
+<li> She Codes Coding Bootcamp  (online) -   ongoing </li>
 <li> Mini-MBA in Business Management    McGill University - Montréal, QC </li>
 <li> Entrepreneurship   Founders Institute - Toronto, ON  </li>
 <li> Entrepreneurship   Sheridan College EDGE Incubation Program </li> 
