--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Margaret Cezar's Resume</title>
+<meta http-equiv="X-Frame-Options" content="DENY" />
+<title>Margaret Cezar's Online Resume 2025</title>
 <link rel="stylesheet" href="styles.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
