--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+<script src="https://kit.fontawesome.com/aff3831b45.js" crossorigin="anonymous"></script>
  </head>
 
  <body>
@@ -33,14 +33,16 @@
  <p>
     Websites:
  <br />
-<a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
 
+<div class="links">
+    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
     <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
     <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
     <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
     > Canva Portfolio</a>
     <br />
-    </p>
+</div>
+
 
     <h2>Full-Stack Developer / Cybersecurity Student</h2>
     </section>
