added fontawesome icons, added styling

--- a/index.html
+++ b/index.html
@@ -28,23 +28,30 @@
  <header>
     <section class="contact-info">
     <h1>Margaret Cezar</h1>
-        <p> California, USA | <a href="https://margaretcezar.com/contact" rel="noopener noreferrer"> Contact Me</a>
+        <p> Toronto, ON Canada| <a href="https://margaretcezar.com/contact" rel="noopener noreferrer"> Contact Me</a>
  </p>
- <p>
-    Websites:
- <br />
 
-<div class="links">
-    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="github portfolio">Github Portfolio</a><br/>
+<div class="links-container">
+    <div class="fa-links">
+      <i class="fa-brands fa-square-github fa-xl"></i>
+    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="   github portfolio">Github Portfolio</a><br/>
+           <i class="fa-brands fa-linkedin fa-xl"></i>
     <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
+    <i class="fa-regular fa-face-smile"></i>
     <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
+      <i class="fa-brands fa-square-twitter fa-xl"></i>
+    <a href="https://x.com/lofelle" target="_blank" rel="noopener noreferrer" aria-label="twitter" 
+    > Twitter Link</a>
+    <br />
+    <i class="fa-regular fa-image"></i>
     <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
     > Canva Portfolio</a>
     <br />
+    </div>
 </div>
 
 
-    <h2>Full-Stack Developer / Cybersecurity Student</h2>
+    <h2>Founder & Software Developer</h2>
     </section>
  </header>
     <!-- Additional sections for Education, Experience, etc. -->
@@ -59,16 +66,16 @@
     I am a multi-passionate and multi-skilled generalist with a wide range of experience in Marketing, Product & Engineering, Accounting, and Legal domains. I have a Bachelor's degree and am a self-motivated entrepreneur passionate about technology.  My greatest strength is my ability to improve processes where possible, and I am proactive, a fast learner, and highly organized. I am open to joining a technical team, working with A-team players, and solving challenging and impactful cases.
 </p>
 
-<h3>Technical Skills:</h3>
+<h3>Technical Skills</h3>
 
 <ul>
-    <li>Programming languages: 
+    <li>Programming languages 
 HTML5, CSS3, JavaScript, React, JS, Python </li>
     <li>Tools and Platforms: VS Code, Git, GitHub, Azure, AWS, Shopify, WordPress, VS Code, Git, GitHub, Canva, Shopify, NodeJS, Netlify, Microsoft Office 365</li>
     <li>Frameworks and Technologies: OpenAI ChatGPT, Azure, Generative AI </li>
 </ul>
 
-<h3>Soft Skills:</h3>
+<h3>Soft Skills</h3>
 <ul>
     <li>Leadership</li>
     <li>Process Improvement</li>
@@ -76,7 +83,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
     <li>Time Management</li>
 </ul>
 
-<h3>Education:</h3>
+<h3>Education</h3>
 <ul>
 
 <li> Microsoft Learn -Azure (online)    - ongoing</li>
@@ -91,7 +98,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 <li> BSc. in Respiratory Therapy    Emilio Aguinaldo College  </li>
 </ul>
 
-<h3> Certifications:</h3>
+<h3> Certifications</h3>
 <ul>
 <li> Diploma in Graphic Design                  | Shaw Academy              Issued July 2020 </li>
 <li> Certified eCommerce Marketing Specialist   | Digital Marketer          Issued April 2020 </li> 
