--- a/index.html
+++ b/index.html
@@ -33,19 +33,22 @@
 
 <div class="links-container">
     <div class="fa-links">
+            <i class="fa-solid fa-face-smile"></i>
+    <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> </a> <br/>
+
       <i class="fa-brands fa-square-github fa-xl"></i>
-    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="   github portfolio">Github Portfolio</a><br/>
+    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer" aria-label="   github portfolio"></a><br/>
+
            <i class="fa-brands fa-linkedin fa-xl"></i>
-    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> Linkedin Portfolio </a> <br/>
-    <i class="fa-regular fa-face-smile"></i>
-    <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website"> Personal website </a> <br/>
+    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="Linkedin website"> </a> <br/>
+
       <i class="fa-brands fa-square-twitter fa-xl"></i>
     <a href="https://x.com/lofelle" target="_blank" rel="noopener noreferrer" aria-label="twitter" 
-    > Twitter Link</a>
+    > </a>
     <br />
     <i class="fa-regular fa-image"></i>
     <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer" aria-label="personal website canva made design" 
-    > Canva Portfolio</a>
+    > </a>
     <br />
     </div>
 </div>
