--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta http-equiv="X-Frame-Options" content="DENY" />
-<title>Margaret Cezar's Online Resume 2025</title>
+<!-- <meta http-equiv="X-Frame-Options" content="DENY" /> -->
+ <title>Margaret Cezar's Online Resume 2025</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+
 <link rel="stylesheet" href="styles.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
@@ -20,6 +23,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
 <script src="https://kit.fontawesome.com/aff3831b45.js" crossorigin="anonymous"></script>
  </head>
 
@@ -33,23 +37,25 @@
 
 <div class="links-container">
     <div class="fa-links">
-            <i class="fa-solid fa-face-smile"></i>
-    <a href="https://www.margaretcezar.com" target="_blank" aria-label="personal website"> </a> <br/>
 
-      <i class="fa-brands fa-square-github fa-xl"></i>
-    <a href="https://www.github.com/margaret6556/" target="_blank" "   github portfolio"></a><br/>
+    <a href="https://www.margaretcezar.com" target="_blank" rel="noopener noreferrer" aria-label="personal website">
+      <i class="fa-solid fa-circle-user fa-xl"></i>
+    </a>
+  
+    <a href="https://www.github.com/margaret6556/" target="_blank" rel="noopener noreferrer"  >    
+        <i class="fa-brands fa-github-square fa-xl"></i></a>
 
-           <i class="fa-brands fa-linkedin fa-xl"></i>
-    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" aria-label="Linkedin website"> </a> <br/>
+        
+    <a href="https://www.linkedin.com/in/margaretcezar.com" target="_blank" rel="noopener noreferrer"  >
+          <i class="fa-brands fa-linkedin fa-xl"></i>  </a> 
 
-      <i class="fa-brands fa-square-twitter fa-xl"></i>
-    <a href="https://x.com/lofelle" target="_blank"  aria-label="twitter" 
-    > </a>
-    <br />
-    <i class="fa-regular fa-image"></i>
-    <a href="https://margaretcezar.my.canva.site/" target="_blank" aria-label="personal website canva made design" 
-    > </a>
-    <br />
+      
+    <a href="https://x.com/lofelle" target="_blank" rel="noopener noreferrer"  aria-label="twitter" 
+    > <i class="fa-brands fa-square-x-twitter fa-xl"></i> </a>
+ 
+  
+    <a href="https://margaretcezar.my.canva.site/" target="_blank" rel="noopener noreferrer"  aria-label="canva"> <i class="fa-regular fa-image fa-xl"></i> </a>
+ 
     </div>
 </div>
 
