updated content as of 2025

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<!-- <meta http-equiv="X-Frame-Options" content="DENY" /> -->
+<meta http-equiv="X-Frame-Options" content="DENY">
  <title>Margaret Cezar's Online Resume 2025</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
@@ -80,8 +80,8 @@
 <ul>
     <li>Programming languages 
 HTML5, CSS3, JavaScript, React, JS, Python </li>
-    <li>Tools and Platforms: VS Code, Git, GitHub, Azure, AWS, Shopify, WordPress, VS Code, Git, GitHub, Canva, Shopify, NodeJS, Netlify, Microsoft Office 365</li>
-    <li>Frameworks and Technologies: OpenAI ChatGPT, Azure, Generative AI </li>
+    <li>Tools and Platforms: VS Code, Git, GitHub, AWS, WordPress, VS Code, Git, GitHub, Canva, Shopify, NodeJS, Netlify, Microsoft Office 365</li>
+    <li>Frameworks and Technologies: OpenAI ChatGPT, Azure, Generative AI, Flowise, Boostrap</li>
 </ul>
 
 <h3>Soft Skills</h3>
@@ -95,7 +95,7 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 <h3>Education</h3>
 <ul>
 
-<li> Microsoft Learn -Azure (online)    - ongoing</li>
+<li> Computers Science -EDx online (Harvard University) - ongoing</li>
 <li> Python Certification course (online)   - ongoing </li>
 <li> She Codes Coding Bootcamp  online -   ongoing </li>
 <li> Mini-MBA in Business Management    McGill University - Montréal, QC </li>
@@ -109,6 +109,15 @@ HTML5, CSS3, JavaScript, React, JS, Python </li>
 
 <h3> Certifications</h3>
 <ul>
+<li> Advanced Website Development              | She Codes Coding Bootcamp  Issued February 7, 2025 </li>
+<li> Introduction to Artificial Intelligence   | She Codes Coding Bootcamp  Issued December 31, 2024 </li>
+ <li> Advanced Web Development             | She Codes Coding Bootcamp  Issued December 18, 2024 </li>
+ <li> Intro to Web Development             | She Codes Coding Bootcamp  Issued February 9, 2024 </li>
+ <li> Advanced REACT Development             | She Codes Coding Bootcamp  Issued July 28, 2023 </li>
+ <li> Responsive Web Development             | She Codes Coding Bootcamp  Issued April 8, 2023 </li>
+ <li> Intermediate Web Development             | She Codes Coding Bootcamp  Issued August 19, 2022 </li>
+ <li> Introduction to Coding             | She Codes Coding Bootcamp  Issued May 9, 2022 </li>
+ <li> Business Process Automation           | Ted Rogers School   Issued November 30, 2021 </li>
 <li> Diploma in Graphic Design                  | Shaw Academy              Issued July 2020 </li>
 <li> Certified eCommerce Marketing Specialist   | Digital Marketer          Issued April 2020 </li> 
 <li> Direct Response Copywriting Specialist     | Digital Marketer          Issued April 2020 </li>
